CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)

PROJECT(ntm)

ENABLE_TESTING()

FILE(GLOB NTM_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/ntm/*.h")
FILE(GLOB NTM_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/ntm/*.c")
FILE(GLOB NTM_TEST_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/tests/*.c")

IF (UNIX)
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c89 -pedantic -pedantic-errors -Wall -Wextra")
	IF ("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU")
		IF (CMAKE_C_COMPILER_VERSION VERSION_GREATER 4)
			SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wconversion")
		ENDIF()
	ENDIF()
ELSE()
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /Wall")
ENDIF()

ADD_SUBDIRECTORY(ntm)
ADD_SUBDIRECTORY(tests)
